:wrench: fixes many small layout issues on 425px res

--- a/src/app/hero-list.component.sass
+++ b/src/app/hero-list.component.sass
@@ -2,9 +2,14 @@
 @import "saffron/saffron"
 
 .partyzone
-    border: 2px
+    border: 10px
+    border-color: black
+    border-style: groove
+    margin: 0px
     background: blanchedalmond
     width: 100%
+.partyrow
+    height: 20%
 
 .grouping-box
     border-width: 2px
@@ -12,7 +17,15 @@
     border-style: groove
     border-radius: 3px
 
-.ally-pic
+.party-ally
+    border-width: 2px
+    border-style: groove
+    width: 100%
+    margin-top: 8px
+    width: 60px
+    height: 60px
+
+.army-ally
     border-width: 0px
     border-style: groove
     width: 60%
