--- a/src/app/hero.component.sass
+++ b/src/app/hero.component.sass
@@ -17,9 +17,11 @@
 
 .party-img
     width: 20vw
-    border-width: 4px
+    border-width: 2px
     border-color: darkgrey
     border-style: groove
+    padding: 0px
+    margin-left: 4px
 .framed-img
     position: center
 
